<resources>
    <string name="app_name">GTMovies</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">GTMovies</string>

    <!-- Strings for welcome -->
    <string name="welcome_title">Welcome to GTMovies</string>
    <string name="welcome_subheading">Welcome to GTMovies!</string>
    <string name="welcometext">Go ahead and press continue to see what the buzz is all about.
    </string>
    <string name="welcome_login">Login</string>
    <string name="welcome_register">Register</string>

    <string name="splash_title">GTMovies</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confim">Confirm password</string>
    <string name="promt_display_name">Display name</string>
    <string name="prompt_email">Email</string>
    <string name="email">null</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user_full_name">John Smith</string>
    <string name="username">username</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_user_list">User List</string>
    <string name="title_social">Social</string>
    <string name="action_users">Users</string>
    <string name="title_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_search">Search</string>
    <string name="title_registered_users">Registered Users:</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Strings for Drawer -->
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_account_delete">Make me an Admin</string>
    <string name="pref_account_admin_summary">mimicks remote setting of admin status</string>
    <string name="pref_account_language">Language/언어/語言</string>
    <string name="pref_account_language_summary">Changes Languages</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="scores">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="profMajors">
        <item>(select one)</item>
        <item>CE</item>
        <item>CM</item>
        <item>CS</item>
        <item>BME</item>
        <item>CivilE</item>
        <item>EnvE</item>
        <item>AE</item>
        <item>EE</item>
        <item>ME</item>
        <item>ISYE</item>
        <item>INTA</item>
        <item>Math</item>
        <item>Phys</item>
        <item>Chem</item>
        <item>ChemE</item>
        <item>Econ</item>
        <item>Policy</item>
        <item>LMC</item>
        <item>HTS</item>
        <item>Global Econ</item>
        <item>Lang</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings Related to Movie List -->
    <string name="recycler_view">Movie List</string>
    <string name="title_movie_list">Movie</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="default_movie_title">Movie Title</string>
    <string name="dummy_movie_rating">xx%</string>
    <string name="dummy_movie_description">Movie Description</string>


    <!-- Strings Related to Profile -->
    <string name="name_prof_edit">Name:</string>
    <string name="major_prof_edit">Major:</string>
    <string name="edit_your_profile_here">Edit your profile here:</string>
    <string name="save_profile">Save Profile</string>
    <string name="user_bio">Bio:</string>
    <string name="title_test_list">Items</string>
    <string name="title_admin">Community</string>

    <!-- Strings Related to Movie Detail -->
    <string name="title_test_detail">TEST Detail</string>
    <string name="description">Description:</string>
    <string name="rating">Tomato Rating:</string>
    <string name="comments">Reviews:</string>
    <string name="user_rating">User Rating:</string>
    <string name="my_review">My Review:</string>
    <string name="score">Score:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="tab_new_movie">New Movies</string>
    <string name="tab_top_rental">Top Rentals</string>
    <string name="tab_recommendation">Your Recommendations</string>
    <string-array name="tabs">
        <item>@string/tab_new_movie</item>
        <item>@string/tab_top_rental</item>
        <item>@string/tab_recommendation</item>
    </string-array>


    <string name="criteria_major">Major</string>
    <string name="criteria_genre">Genre</string>
    <string name="criteria_rating">Rating</string>
    <string-array name="criteria">
        <item>@string/criteria_major</item>
        <item>@string/criteria_genre</item>
        <item>@string/criteria_rating</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rank">Rank:</string>
    <string name="uname">Username:</string>
    <string name="change_rank">change rank</string>
    <string name="delete_user">delete user</string>
    <string name="gtmov_tag">GTMovies</string>
    <string name="gtmovtag">GTMovies</string>

    <string name="search">search</string>

    <string name="language_list">language list</string>

    <string name="title_language">Languages</string>
    <string name="english">en-Us</string>
    <string name="korean">ko-KO</string>
    <string name="chinese">ch-CH</string>
    <string name="spanish">es-LA</string>

    <string-array name="languages">
        <item>English (US)</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Spanish (Latin America)</item>
    </string-array>
    <string-array name="languages_values">
        <item>@string/english</item>
        <item>@string/korean</item>
        <item>@string/chinese</item>
        <item>@string/spanish</item>
    </string-array>
</resources>
