<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_manage_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/action_edit_profile" />

    <item
        android:title="@string/title_admin">
        <menu>
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/action_users" />
        </menu>
    </item>

    <item android:title="@string/title_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>
    <TextView
        android:id="@+id/nav_branding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="20sp"
        android:text="@string/splash_title">
    </TextView>
</menu>
