<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.UserProfileActivity"
    android:id="@+id/userProfileRootView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_your_profile_here"
        android:id="@+id/textViewUserProfileTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:measureWithLargestChild="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/name_prof_edit"
                android:id="@+id/textViewUserProfileName"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:paddingTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUserProfileName"
                android:ems="13"
                android:layout_gravity="center_vertical"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/major_prof_edit"
                android:id="@+id/textViewUserProfileMajor"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerProfileMajor"
                android:entries="@array/profMajors" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/user_bio"
                android:id="@+id/textViewUserProfileBio"
                style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/editTextUserProfileBio"
            android:lines="5"
            android:nestedScrollingEnabled="false"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:enabled="true"
            android:password="false"
            android:editable="true"
            android:background="@drawable/rounded_edittext"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <Button
        android:text="@string/save_profile"
        android:id="@+id/buttonUserProfileSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linearLayout" />


</RelativeLayout>
