<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_root"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:theme="@style/AppTheme"
    android:weightSum="1"
    android:background="?attr/colorPrimary"
    android:padding="30dp">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:orientation="horizontal"
        android:backgroundTint="#969aae"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:measureWithLargestChild="false"
            android:padding="10dp"
            android:minWidth="300dp">

            <FrameLayout
                android:id="@+id/nameLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_display_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:foregroundTint="#0c1020"
                    android:foregroundTintMode="src_atop"
                    android:background="@android:drawable/editbox_background" />
                <!--<EditTextPreference-->
                    <!--android:capitalize="words"-->
                    <!--android:defaultValue="@string/pref_default_display_name"-->
                    <!--android:inputType="textCapWords"-->
                    <!--android:key="example_text"-->
                    <!--android:maxLines="1"-->
                    <!--android:selectAllOnFocus="true"-->
                    <!--android:singleLine="true"-->
                    <!--android:title="@string/pref_title_display_name" />-->

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:lines="1"
                    android:background="@android:drawable/editbox_background"
                    android:nestedScrollingEnabled="false" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/pwRegister"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:lines="1"
                    android:background="@android:drawable/editbox_background" />

            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="15dp">

                <Button
                    android:visibility="gone"
                    android:id="@+id/cancel_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancel"
                    android:text="@string/action_cancel"
                    android:textStyle="bold" />

                <Button
                    android:visibility="visible"
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:textStyle="bold" />

                <Button
                    android:visibility="visible"
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_gravity="right" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
