<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:textIsSelectable="true"
    tools:context=".fragment.MovieDetailFragment"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/big_card"
            android:id="@+id/relativeLayout"
            android:layout_marginTop="4dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="@string/rating"
                android:id="@+id/ratingTitleView"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingView"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center|right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="N/A" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/big_card"
            android:id="@+id/relativeLayout2"
            android:layout_marginTop="4dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="@string/user_rating"
                android:id="@+id/userRatingTitleView"
                android:layout_centerVertical="true"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_rating_contents"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center|right"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="N/A" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/big_card"
            android:clickable="false"
            android:layout_marginTop="4dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="@string/description"
                android:id="@+id/textView"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="null"
                android:id="@+id/detailView"
                android:layout_gravity="left|center_vertical"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="false"
                android:layout_alignParentBottom="false"
                android:paddingTop="3dp"
                android:paddingBottom="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/big_card"
            android:clickable="false"
            android:layout_marginTop="4dp"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="@string/comments"
                android:id="@+id/textView2"/>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/commentListView"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="false"
                android:backgroundTint="@color/cardview_dark_background"
                android:backgroundTintMode="src_over"
                android:headerDividersEnabled="false" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
